--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://jessecravens.com
+url: http://jessecravens.github.io
 title: Jesse Cravens
 subtitle: u·biq·ui·tous javascript and html5
 author: Jesse Cravens
